# destructive_command_guard

./: .ubsignore  AGENTS.md  Cargo.toml  DGC_IMPROVEMENT_PLAN__GPT.md  README.md  TOON_INTEGRATION_BRIEF.md  install.ps1  install.sh  rustc-ice-2026-01-21T19_35_30-1242961.txt  rustc-ice-2026-01-21T19_35_30-1243067.txt  rustc-ice-2026-01-21T19_35_30-1243112.txt  uninstall.sh
.beads/: agent_mail.txt  issues.jsonl  sync_base.jsonl
.github/workflows/: acfs-checksums-dispatch.yml  ci.yml  dist.yml  history-e2e.yml  scan.yml
.ntm/pids/: bd-destructive_command_guard.pid  cm-destructive_command_guard.pid
benches/: regex_automata_comparison.rs
docs/: configuration.md  coverage-audit-baseline.md  custom-packs.md  design-lazy-pack-registry.md  pack-implementation-checklist.md  pack.schema.yaml  regex-automata-feasibility-report.md
docs/json-schema/: error.json  hook-output.json  scan-results.json  stats-output.json
docs/packs/: README.md
docs/scan/: dockerfile-extractor-v1-spec.md  github-actions-extractor-v1-spec.md  makefile-extractor-v1-spec.md
examples/packs/: example.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_context.rs  fuzz_evaluate.rs  fuzz_hook_input.rs  fuzz_normalize.rs  fuzz_scan_extractors.rs
scripts/: e2e_test.sh  scan_gitdiff_e2e.sh  scan_precommit_e2e.sh
src/: allowlist.rs  ast_matcher.rs  cli.rs  config.rs  context.rs  error_codes.rs  evaluator.rs  heredoc.rs  highlight.rs  hook.rs  interactive.rs  lib.rs  main.rs  mcp.rs  normalize.rs  pending_exceptions.rs  perf.rs  sarif.rs  scan.rs  simulate.rs  stats.rs  suggest.rs  suggestions.rs  trace.rs  update.rs
src/history/: mod.rs  schema.rs
src/output/: denial.rs  mod.rs  progress.rs  tables.rs  test.rs  theme.rs
src/packs/: external.rs  mod.rs  regex_engine.rs  test_template.rs
src/packs/apigateway/: apigee.rs  aws.rs  kong.rs
src/packs/backup/: borg.rs  mod.rs  rclone.rs  restic.rs  velero.rs
src/packs/cdn/: cloudflare_workers.rs  cloudfront.rs  fastly.rs
src/packs/cicd/: circleci.rs  github_actions.rs  gitlab_ci.rs  jenkins.rs
src/packs/cloud/: aws.rs  azure.rs  gcp.rs
src/packs/containers/: compose.rs  docker.rs  podman.rs
src/packs/core/: filesystem.rs  git.rs
src/packs/database/: mod.rs  mongodb.rs  mysql.rs  postgresql.rs  redis.rs  sqlite.rs
src/packs/dns/: cloudflare.rs  generic.rs  route53.rs
src/packs/email/: mailgun.rs  mod.rs  postmark.rs  sendgrid.rs  ses.rs
src/packs/featureflags/: flipt.rs  launchdarkly.rs  mod.rs  split.rs  unleash.rs
src/packs/infrastructure/: ansible.rs  mod.rs  pulumi.rs  terraform.rs
src/packs/kubernetes/: helm.rs  kubectl.rs  kustomize.rs
src/packs/loadbalancer/: elb.rs  mod.rs  traefik.rs
src/packs/messaging/: kafka.rs  nats.rs  rabbitmq.rs  sqs_sns.rs
src/packs/monitoring/: datadog.rs  mod.rs  newrelic.rs  pagerduty.rs  prometheus.rs  splunk.rs
src/packs/package_managers/: mod.rs
src/packs/payment/: braintree.rs  mod.rs  square.rs  stripe.rs
src/packs/platform/: github.rs  gitlab.rs
src/packs/remote/: rsync.rs  scp.rs  ssh.rs
src/packs/safe/: cleanup.rs  mod.rs
src/packs/search/: algolia.rs  elasticsearch.rs  meilisearch.rs  opensearch.rs
src/packs/secrets/: aws_secrets.rs  doppler.rs  onepassword.rs  vault.rs
src/packs/storage/: azure_blob.rs  gcs.rs  minio.rs  mod.rs  s3.rs
src/packs/strict_git/: mod.rs
src/packs/system/: disk.rs  permissions.rs  services.rs
src/telemetry/: mod.rs
tests/: agent_exit_codes.rs  agent_hook_output.rs  agent_json_format.rs  cli_e2e.rs  confidence_scoring.rs  config_toggles_e2e.rs  debug_heredoc_extraction.rs  doc_pack_list_consistency.rs  external_pack_validation.rs  golden_json_tests.rs  history_integration.rs  memory_tests.rs  pattern_audit.rs  regression_corpus.rs  regression_heredoc_masking.rs  regression_path_anchors.rs  repro_git_bypasses.rs  repro_heredoc_masking.rs  repro_redirection_bypass.rs  repro_restic_quoted.rs  repro_safe_pattern_bypass.rs  repro_windows_exe.rs  robot_mode.rs  scan_extractor_integration.rs  security_regressions_v3.rs  stdin_batch_mode.rs  suggest_allowlist_e2e.rs  suggestion_integration.rs  suggestion_scoring.rs  telemetry_integration.rs  temporary_allowlist_tests.rs  test_explanations.rs  tui_e2e.rs
tests/common/: db.rs  fixtures.rs
tests/corpus/: README.md
tests/corpus/bypass_attempts/: heredoc_inline.toml  obfuscation.toml
tests/corpus/edge_cases/: boundaries.toml  regex_worst_case.toml  unicode.toml
tests/corpus/false_positives/: git_safe.toml  heredoc_data.toml  other_safe.toml
tests/corpus/true_positives/: git_destructive.toml  rm_destructive.toml
tests/e2e/: run_history_e2e.sh  run_install_e2e.sh  run_telemetry_e2e.sh
tests/golden/hook/: deny_filesystem.json  deny_git.json  deny_git_reset.json
tests/install/: agent_config_test.bats  install_test.bats  test_helper.bash  uninstall_test.bats
