[package]
name = "destructive_command_guard"
version = "0.2.12"
edition = "2024"
resolver = "2"
authors = [
    "Jeffrey Emanuel <jeff@jeffreyemanuel.dev>",
    "Dowwie <dowwie@gmail.com>"
]
description = "A Claude Code hook that blocks destructive commands before they execute"
repository = "https://github.com/Dicklesworthstone/destructive_command_guard"
homepage = "https://github.com/Dicklesworthstone/destructive_command_guard"
license = "MIT"
keywords = ["destructive", "safety", "claude", "hook", "cli", "guard"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

# Primary binary with short alias
[[bin]]
name = "dcg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"          # External pack YAML parsing
toml = "0.8"
toml_edit = "0.22"         # Preserves formatting when editing TOML files
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }  # RFC 3339 timestamps
fancy-regex = "0.14"
regex = "1.10"              # For RegexSet in heredoc detection
memchr = "2.7"
aho-corasick = "1.1"        # Multi-pattern string matching for keyword quick-reject
smallvec = "1.15.1"
colored = "2.1"
dirs = "5.0"
glob = "0.3"                # Glob pattern expansion for custom pack paths
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
once_cell = "1.19"
base64 = "0.22"              # For decision log format parsing in simulate
async-trait = "0.1.89"
rust-mcp-sdk = { version = "0.8.1", default-features = false, features = ["server", "stdio", "macros"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
rayon = { version = "1.11", optional = true }

# AST-based pattern matching for heredoc/inline-script content
ast-grep-core = "0.40"
ast-grep-language = { version = "0.40", default-features = false, features = [
    "tree-sitter-bash",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-ruby",
    "tree-sitter-go",
    "tree-sitter-php",
] }

# Tracing/logging for heredoc detection debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hmac = "0.12"  # HMAC for optional short-code hardening (ksk.1.10)
fs2 = "0.4"
rusqlite = { version = "0.35", features = ["bundled"] }  # Telemetry database
ctrlc = "3.5.1"
flate2 = "1.0"  # Gzip compression for history export

# Update checking dependencies
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }
semver = "1.0"  # Semantic version comparison for update checks

# TUI/CLI visual polish dependencies (advk epic)
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
comfy-table = "7.2"
indicatif = "0.17"
console = "0.15"
inquire = "0.7"

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"
regex-automata = "0.4"  # For ksk.8.1 prototype comparison

[[bench]]
name = "heredoc_perf"
harness = false

[[bench]]
name = "regex_automata_comparison"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size (lean binary for distribution)
lto = true          # Link-time optimization across crates
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

[profile.dev]
opt-level = 1       # Faster compile times during development

[features]
rayon = ["dep:rayon"]

[lints.rust]
# unsafe_code = "forbid" # Moved to src/lib.rs and src/main.rs to allow unsafe in tests

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
