[package]
name = "destructive_command_guard-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.destructive_command_guard]
path = ".."

# Fuzz target: full evaluator
[[bin]]
name = "fuzz_evaluate"
path = "fuzz_targets/fuzz_evaluate.rs"
test = false
doc = false
bench = false

# Fuzz target: hook JSON input parsing
[[bin]]
name = "fuzz_hook_input"
path = "fuzz_targets/fuzz_hook_input.rs"
test = false
doc = false
bench = false

# Fuzz target: context classifier (shell tokenizer)
[[bin]]
name = "fuzz_context"
path = "fuzz_targets/fuzz_context.rs"
test = false
doc = false
bench = false

# Fuzz target: command normalization
[[bin]]
name = "fuzz_normalize"
path = "fuzz_targets/fuzz_normalize.rs"
test = false
doc = false
bench = false
